--- a/chinslickingweb/home/templates/header-index.html
+++ b/chinslickingweb/home/templates/header-index.html
@@ -48,6 +48,42 @@
             background-position: 0 0;
             background-repeat: no-repeat;
             z-index: 1;
+            -webkit-animation-name: animated-cloud-01;
+            -webkit-animation-duration: 20s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-cloud-01;
+            -moz-animation-duration: 20s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-animation-name: animated-cloud-01;
+            -ms-animation-duration: 20s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-cloud-01;
+            -o-animation-duration: 20s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-cloud-01;
             animation-duration: 20s;
             animation-iteration-count: infinite;
@@ -65,6 +101,42 @@
             background: url({% static 'images/cloud_02.png' %}) no-repeat;
             background-size: 5%;
             z-index: 1;
+            -webkit-animation-name: animated-cloud-02;
+            -webkit-animation-duration: 150s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-cloud-02;
+            -moz-animation-duration: 150s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-animation-name: animated-cloud-02;
+            -ms-animation-duration: 150s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-cloud-02;
+            -o-animation-duration: 150s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-cloud-02;
             animation-duration: 150s;
             animation-iteration-count: infinite;
@@ -82,6 +154,42 @@
             background: url({% static 'images/cloud_03.png' %}) no-repeat;
             background-size: 10%;
             z-index: 1;
+            -webkit-animation-name: animated-cloud-03;
+            -webkit-animation-duration: 50s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-cloud-03;
+            -moz-animation-duration: 50s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-animation-name: animated-cloud-03;
+            -ms-animation-duration: 50s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-cloud-03;
+            -o-animation-duration: 50s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-cloud-03;
             animation-duration: 50s;
             animation-iteration-count: infinite;
@@ -112,6 +220,42 @@
             background: url({% static 'images/cloud_04.png' %}) no-repeat;
             background-size: 8%;
             z-index: 1;
+            -webkit-animation-name: animated-cloud-04;
+            -webkit-animation-duration: 80s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-cloud-04;
+            -moz-animation-duration: 80s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-animation-name: animated-cloud-04;
+            -ms-animation-duration: 80s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-cloud-04;
+            -o-animation-duration: 80s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-cloud-04;
             animation-duration: 80s;
             animation-iteration-count: infinite;
@@ -129,6 +273,42 @@
             background: url({% static 'images/cloud_05.png' %}) no-repeat;
             background-size: 12%;
             z-index: 1;
+            -webkit-animation-name: animated-cloud-05;
+            -webkit-animation-duration: 40s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-cloud-05;
+            -moz-animation-duration: 40s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-nimation-name: animated-cloud-05;
+            -ms-animation-duration: 40s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-cloud-05;
+            -o-animation-duration: 40s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-cloud-05;
             animation-duration: 40s;
             animation-iteration-count: infinite;
@@ -146,6 +326,42 @@
             background: url({% static 'images/cloud_02.png' %}) no-repeat;
             background-size: 4%;
             z-index: 1;
+            -webkit-animation-name: animated-cloud-06;
+            -webkit-animation-duration: 200s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-cloud-06;
+            -moz-animation-duration: 200s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-animation-name: animated-cloud-06;
+            -ms-animation-duration: 200s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-cloud-06;
+            -o-animation-duration: 200s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-cloud-06;
             animation-duration: 200s;
             animation-iteration-count: infinite;
@@ -177,6 +393,42 @@
             background: url({% static 'images/bird.gif' %}) no-repeat;
             background-size: 4%;
             z-index: 1;
+            -webkit-animation-name: animated-bird;
+            -webkit-animation-duration: 90s;
+            -webkit-animation-iteration-count: infinite;
+            -webkit-animation-timing-function: linear;
+            -webkit-animation-direction: normal;
+            -webkit-animation-delay: 0s;
+            -webkit-animation-fill-mode: none;
+            -webkit-animation-play-state: running;
+
+            -moz-animation-name: animated-bird;
+            -moz-animation-duration: 90s;
+            -moz-animation-iteration-count: infinite;
+            -moz-animation-timing-function: linear;
+            -moz-animation-direction: normal;
+            -moz-animation-delay: 0s;
+            -moz-animation-fill-mode: none;
+            -moz-animation-play-state: running;
+
+            -ms-animation-name: animated-bird;
+            -ms-animation-duration: 90s;
+            -ms-animation-iteration-count: infinite;
+            -ms-animation-timing-function: linear;
+            -ms-animation-direction: normal;
+            -ms-animation-delay: 0s;
+            -ms-animation-fill-mode: none;
+            -ms-animation-play-state: running;
+
+            -o-animation-name: animated-bird;
+            -o-animation-duration: 90s;
+            -o-animation-iteration-count: infinite;
+            -o-animation-timing-function: linear;
+            -o-animation-direction: normal;
+            -o-animation-delay: 0s;
+            -o-animation-fill-mode: none;
+            -o-animation-play-state: running;
+
             animation-name: animated-bird;
             animation-duration: 90s;
             animation-iteration-count: infinite;
@@ -190,16 +442,34 @@
 
         .bottle-fadeIn{
             -webkit-animation-name:animated-bottle;
+            -webkit-animation-duration: 1s;
+
             -moz-animation-name:animated-bottle;
+            -moz-animation-duration: 1s;
+
             -ms-animation-name:animated-bottle;
+            -ms-animation-duration: 1s;
+
+            -o-animation-name:animated-bottle;
+            -o-animation-duration: 1s;
+
             animation-name:animated-bottle;
             animation-duration: 1s;
         }
 
         .rain-fadeIn{
             -webkit-animation-name:animated-rain;
+            -webkit-animation-duration: 1.5s;
+
             -moz-animation-name:animated-rain;
+            -moz-animation-duration: 1.5s;
+
             -ms-animation-name:animated-rain;
+            -ms-animation-duration: 1.5s;
+
+            -o-animation-name:animated-rain;
+            -o-animation-duration: 1.5s;
+
             animation-name:animated-rain;
             animation-duration: 1.5s;
         }
@@ -211,10 +481,11 @@
             bottom: 12%;
             left: 41%;
             width: 22%;
+            z-index: 5;
         }
         .tree-01{
             text-align: center;
-            z-index: 1;
+            z-index: 6;
         }
         .tree-01 img{
             width: 30%;
@@ -259,8 +530,17 @@
         }
         .waternumber-01-fadeIn{
             -webkit-animation-name:animated-waternumber-01;
+            -webkit-animation-duration: 1s;
+
             -moz-animation-name:animated-waternumber-01;
+            -moz-animation-duration: 1s;
+
             -ms-animation-name:animated-waternumber-01;
+            -ms-animation-duration: 1s;
+
+            -o-animation-name:animated-waternumber-01;
+            -o-animation-duration: 1s;
+
             animation-name:animated-waternumber-01;
             animation-duration: 1s;
         }
@@ -272,10 +552,11 @@
             bottom: 12%;
             left: 41%;
             width: 22%;
+            z-index: 5;
         }
         .tree-02{
             text-align: center;
-            z-index: 2;
+            z-index: 6;
         }
         .tree-02 img{
             width: 70%;
@@ -320,8 +601,17 @@
         }
         .waternumber-02-fadeIn{
             -webkit-animation-name:animated-waternumber-02;
+            -webkit-animation-duration: 1s;
+
             -moz-animation-name:animated-waternumber-02;
+            -moz-animation-duration: 1s;
+
             -ms-animation-name:animated-waternumber-02;
+            -ms-animation-duration: 1s;
+
+            -o-animation-name:animated-waternumber-02;
+            -o-animation-duration: 1s;
+
             animation-name:animated-waternumber-02;
             animation-duration: 1s;
         }
@@ -333,10 +623,11 @@
             bottom: 12%;
             left: 41%;
             width: 22%;
+            z-index: 5;
         }
         .tree-03{
             text-align: center;
-            z-index: 3;
+            z-index: 6;
         }
         .tree-03 img{
             width: 70%;
@@ -373,8 +664,17 @@
         }
         .waternumber-03-fadeIn{
             -webkit-animation-name:animated-waternumber-03;
+            -webkit-animation-duration: 1s;
+
             -moz-animation-name:animated-waternumber-03;
+            -moz-animation-duration: 1s;
+
             -ms-animation-name:animated-waternumber-03;
+            -ms-animation-duration: 1s;
+
+            -o-animation-name:animated-waternumber-03;
+            -o-animation-duration: 1s;
+
             animation-name:animated-waternumber-03;
             animation-duration: 1s;
         }
@@ -386,10 +686,11 @@
             bottom: 12%;
             left: 41%;
             width: 22%;
+            z-index: 5;
         }
         .tree-04{
             text-align: center;
-            z-index: 4;
+            z-index: 6;
             cursor: pointer;
         }
         .tree-04 img{
@@ -427,8 +728,17 @@
         }
         .waternumber-04-fadeIn{
             -webkit-animation-name:animated-waternumber-04;
+            -webkit-animation-duration: 1s;
+
             -moz-animation-name:animated-waternumber-04;
+            -moz-animation-duration: 1s;
+
             -ms-animation-name:animated-waternumber-04;
+            -ms-animation-duration: 1s;
+
+            -o-animation-name:animated-waternumber-04;
+            -o-animation-duration: 1s;
+
             animation-name:animated-waternumber-04;
             animation-duration: 1s;
         }
