--- a/chinslickingweb/home/templates/king.html
+++ b/chinslickingweb/home/templates/king.html
@@ -73,42 +73,18 @@
         <div class="row">
             <div class="col-md-12 bg6">
                 <div style="padding-top: 0;">
-{#                    {% for item in policy_list %}#}
                     <div class="single-faq">
-                        <h2><span>&nbsp;&nbsp;</span>品牌短板故事</h2>
-                        <p style="letter-spacing: 2px;font-weight: 500;">
-                            <img src="{% static 'images/chinslicking.jpg' %}" align="left" width="300" hspace="5" vspace="5" style="margin-right: 20px;">
-                            秦始皇（前259年农历十二月初三—前210年），嬴姓，赵氏，名政，又名赵正（政）、秦政，或称祖龙，秦庄襄王之子。中国历史上著名的政治家、战略家、改革家，完成华夏大一统的铁腕政治人物，也是中国第一个称皇帝的君主。
-
-自前230年至前221年，先后灭韩、赵、魏、楚、燕、齐六国，39岁时完成了统一中国大业，建立起一个以汉族为主体统一的中央集权的强大国家——秦朝，并奠定中国本土的疆域。
-
-秦始皇认为自己的功劳胜过之前的三皇五帝，采用三皇之“皇”、五帝之“帝”构成“皇帝”的称号，是中国历史上第一个使用“皇帝”称号的君主，所以自称“始皇帝”。同时在中央实行三公九卿，管理国家大事。地方上废除分封制，代以郡县制，同时书同文，车同轨，统一度量衡。对外北击匈奴，南征百越，修筑万里长城，修筑灵渠，沟通水系。
-
-秦始皇是中国历史上一位叱咤风云富有传奇色彩的划时代人物，是中国历史上第一个大一统王朝——秦王朝的开国皇帝，对中国和世界历史产生深远影响，把中国推向大一统时代，奠定中国两千余年政治制度基本格局，被明代思想家李贽誉为“千古一帝”</p>
+                        <h2><span>&nbsp;&nbsp;</span>{{ story.short_title }}</h2>
+                        {{ story.short_content|safe }}
                     </div>
-{#                    {% endfor %}#}
                 </div>
             </div>
             <div class="col-md-12 bg6">
                 <div style="padding-top: 0;">
-{#                    {% for item in policy_list %}#}
                     <div class="single-faq">
-                        <h2><span>&nbsp;&nbsp;</span>品牌长板故事</h2>
-                        <p style="letter-spacing: 2px;">教科书上说，秦的暴政还体现在沉重的赋税这一点上。
-      关于秦朝的赋税问题，《睡虎地云梦竹简》上也没有过多的记载，我们无法从当代留下的资料中查证，只能通过后世所传史书推断秦朝的赋税，故有些地方也许并不属实。
-      《汉书·食货志》说秦帝国是男子努力耕作仍得不到足够的粮食，女子不停纺织仍没有足够的衣服。天下所有的资产都上交给了国家。老百姓穿的是牛马般衣服，吃的是和猪狗一样的食物。这就是我们通常所说的吃不饱穿不暖，过着牛马不若的生活。
-      可是，这些词语被用在所有的朝代。只要撰文者对那个朝代稍有不满，都可以用这样的词汇来抨击——最好的例证就是每个人在分析历史人物的时候，都或多或少会带上自己的主观臆断和个人观点，都会有失偏差。所以这些词语虽然容易打动人心，却并没有任何的实际意义。
-      《汉书·食货志》记载董仲舒上书说：“秦则不然，用商鞅之法，……田租、口赋、盐铁之利，二十倍与古。”
-此条比较具体，用数字说明秦始皇征收赋税是前朝的二十倍，猛一看似乎言之有理。但让我们分析一下，不免觉得荒谬。
-单从文字讲，如果说秦朝经过商鞅变法后，把原来属于列侯和贵族封国所得，收归国家，造成国家税收大幅增加，那还说得过去。如果说是秦始皇统一六国后，加重了百姓的赋税，导致百姓上缴国家的赋税是古代先朝的二十倍，那就有矛盾的地方了。
-      孟子有云：“什一而税，王者之政。”意为百姓收获十份，上缴一份，是贤明君主的做法。可见战国时期大家公认的合理税收为十分之一，同时也说明那些无道君主的税收不止十分之一。东汉的苟悦在《汉纪》中说：“古者什一而税，以为天下之中正也。”这句话说明汉朝也认同十税一的做法。回到董仲舒“二十倍与古”这句话上，如果秦始皇之前的朝代是十税一的话，到秦始皇这里变成了原来的二十倍。试问你要如何从十份中抽出二十份上交？杀鸡取卵连鸡都吃掉了还不够，明显违背常理。就算先朝是按汉高祖的做法，“什五二税一”，即收获十五份上交一份，比春秋战国时期又要减轻不少，那么根据董仲舒的说法，到秦始皇这里就要收获十五份上交二十份。又是上述杀鸡取卵的做法，明显荒谬。更何况，在秦始皇统一六国前，春秋战国各国混战，周天子也不像后来描述那么仁慈，根本做不到“什一而税”。而且上述数据还没有计入天灾等等不确定因素。
-      试想在此基础上，秦始皇还如何征收二十倍与古的赋税？
-      深究论证2：为什么人们会说秦朝赋税沉重？
-      秦朝本身就是在春秋战国这样的混乱中诞生的，又是二世而亡，国家没有得到很好地休养生息。到了汉朝时，明显的副作用出现了：一派的荒凉之景。汉高祖及其后继者汉文帝、汉景帝等不得已被迫采取休养生息的政策，即减轻赋税，发展农业。
-      在那时，甚至出现过十五税一、三十税一等等的制度。与秦相比，自然显得秦朝赋税沉重。
-      另一方面，是因为关于秦朝的赋税，至今仍未发现准确的当朝记载，很多时候都是人们的主观臆断和猜测，加上许多撰文者把秦朝描述得黑暗无比，人们以讹传讹所造成。</p>
+                        <h2><span>&nbsp;&nbsp;</span>{{ story.long_title }}</h2>
+                        {{ story.long_content|safe }}
                     </div>
-{#                    {% endfor %}#}
                 </div>
             </div>
         </div>
