--- a/chinslickingweb/home/templates/layer_coupon_form.html
+++ b/chinslickingweb/home/templates/layer_coupon_form.html
@@ -112,6 +112,7 @@
                                 time: 2000,
                             }, function(){
                                 closeLayer();
+                                parent.location.reload();
                             });
                         }else{
                             layer.msg(data.msg, {
